--- a/work.html
+++ b/work.html
@@ -70,9 +70,11 @@ marquee {
           <p> This was for a Youtuber called Shiftery, who paid $7 for this Video </p>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/X-_kAC-6zZI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </center>
-    <h3> Banner </h3>
+    <h3> Logo, Banner Ideas </h3>
     <center>
-      <img src="https://i.ibb.co/PQ6zm40/Untitled.png" alt="Untitled" border="0">
+      <img src="logo.jpg" alt="Untitled" border="0" width="300" height="300">
+       <img src="Gem.png" alt="Untitled" border="0" width="683" height="506">
+        <img src="watermelon.png" alt="Untitled" border="0" width="683" height="512">
       </center>
       <center><p> <b> Other Work Might Not Load Because they were too Large </b> </p></center>
 
