--- a/work.html
+++ b/work.html
@@ -72,7 +72,7 @@ marquee {
     </center>
     <h3> Logo, Banner Ideas </h3>
     <center>
-      <img src="logo.jpg" alt="Untitled" border="0" width="300" height="300">
+      <img src="Logo.jpg" alt="Untitled" border="0" width="300" height="300">
        <img src="Gem.png" alt="Untitled" border="0" width="683" height="506">
         <img src="watermelon.png" alt="Untitled" border="0" width="683" height="512">
       </center>
